--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Mythmaker RPG SRD
 description: Bookmark this to keep an eye on my project updates!
+markdown: GFM
